Under X11 scale settings are not updated depending on selected mode
In X11, available scale settings depend on current mode, and can't be changed depending on the user selected mode.
- Open control center
- Change display mode (resolution)
- Expect the scale selector to be visible depending on the available scaling (for all monitors)
Edited by Marco Trevisan